# fairbnb

./: .gitignore  .pre-commit-config.yaml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  backend_unit_tests.yaml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: backend-postman-update.yaml  backend-pre-commit.yaml  backend-unit-tests.yaml  backend_unit_tests.yaml  frontend-linters.yaml  pre-commit.yaml  prettier.yaml
backend/: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  example.env  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2024_09_07_2102-1952c4364990_create_listings_and_users_tables.py  2024_11_10_1814-03585c5cb5f3_updated_listings_model.py
backend/src/: README.md  crud.py  db.py  main.py  manage.py  models.py  schemas.py  seed.py  utils.py
backend/src/data/: properties.json  users.json
backend/src/db/: asgi.py  manage.py  settings.py  wsgi.py
backend/src/db/properties/: apps.py  models.py
backend/src/db/properties/migrations/: 0001_initial.py
backend/src/db/users/: apps.py  models.py
backend/src/db/users/migrations/: 0001_initial.py
backend/src/fairbnb/: asgi.py  models.py  settings.py  urls.py  wsgi.py
backend/src/fairbnb/migrations/: 0001_initial.py
backend/tests/: conftest.py  generate_test_data.py  test_main.py
backend/tests/data/: listings.csv  listings.json  users.csv  users.json
db/: db.py
frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.mock-server.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/bookings/: page.tsx
frontend/src/app/checkout/: page.tsx
frontend/src/app/favorites/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/properties/: loading.tsx  page.tsx
frontend/src/app/rentals/: page.tsx
frontend/src/app/reviews/: page.tsx
frontend/src/components/Properties/: Amenities.tsx  BookingCalendar.tsx  BreadCrumbs.tsx  Description.tsx  ImageContainer.tsx  PropertyDetails.tsx  PropertyMap.tsx  ShareButton.tsx  Title.tsx  UserInfo.tsx
frontend/src/components/card/: CountryFlagAndName.tsx  FavoriteToggleButton.tsx  LoadingCards.tsx  PropertyCard.tsx  PropertyLocation.tsx  PropertyRating.tsx
frontend/src/components/form/: Buttons.tsx  FormContainer.tsx  FormInput.tsx
frontend/src/components/home/: CategoriesList.tsx  EmptyList.tsx  PropertiesContainer.tsx  PropertiesList.tsx
frontend/src/components/navbar/: LinksDropDown.tsx  Logo.tsx  NavSearch.tsx  SignOutLink.tsx  UserIcon.tsx
frontend/src/components/ui/: date-picker.tsx
frontend/src/mock/: data.json  mock-data-generator.ts  util.ts
frontend/src/utils/: actions.ts  amenities.ts  countries.ts  schemas.ts  types.ts
(+15 files in other folders)
