[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pytest-mock = "^3.14.0"
python-dotenv = "^1.0.1"
django = "^5.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "E", "UP", "SIM", "RSE", "C", "N", "S", "EM", "COM", "R", "ARG", "LOG", "G", "T10"]
ignore = [
    "E501", # Disable line length check
    "COM812", # Disable missing-trailing-comma incompatible with ruff format
    "D203", # Disable one-blank-line-before-class incompatible with ruff format
    "D212", # Disable multi-line-summary-first-line incompatible with ruff format
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-ra",
    "-s"
]
