[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
python-dotenv = "^1.0.1"
django = "^5.1.4"
psycopg = {extras = ["pool", "c"], version = "^3.2.5"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"
pytest-django = "^4.9.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "E", "UP", "SIM", "RSE", "C", "N", "S", "EM", "COM", "R", "ARG", "LOG", "G", "T10"]
ignore = [
    "E501", # Disable line length check
    "COM812", # Disable missing-trailing-comma incompatible with ruff format
    "D203", # Disable one-blank-line-before-class incompatible with ruff format
    "D212", # Disable multi-line-summary-first-line incompatible with ruff format
]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-ra",
    "-s"
]
DJANGO_SETTINGS_MODULE = "src.db.settings"
python_files = "tests.py test_*.py *_tests.py"
